[neptune/#262] Last step: Score and Finalize Fix some layout issues and a bug with finalizing reassessments

--- a/Source/Neptune.Web/Content/Bootstrap/neptune/base.theme.less
+++ b/Source/Neptune.Web/Content/Bootstrap/neptune/base.theme.less
@@ -1088,11 +1088,6 @@ ul.dropdown-menu {
         font-style: italic;
     }
 
-
-    .form-horizontal .control-label {
-        padding-top: 7px;
-    }
-
     input[type=checkbox] {
         margin-top: 10px;
     }
