--- a/Source/Neptune.Web/Content/Bootstrap/neptune/ocstormwater.theme.less
+++ b/Source/Neptune.Web/Content/Bootstrap/neptune/ocstormwater.theme.less
@@ -246,6 +246,10 @@ hr {
     }
 }
 
+.form-horizontal .form-control{
+    margin-top:-7px;
+}
+
 .neptuneMap {
     height: 350px;
 }
